--- a/kubernetes/apps/longhorn-system/longhorn-system/ingress.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: longhorn-frontend
-  namespace: default
+  namespace: longhorn-system
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
