--- a/kubernetes/apps/monitoring/goldilocks/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/goldilocks/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       version: 6.4.0
       sourceRef:
         kind: HelmRepository
-        name: fairwinds-charts
+        name: fairwinds
         namespace: flux-system
       interval: 15m
   timeout: 20m
