--- a/kubernetes/flux/repositories/helm/fairwinds.yaml
+++ b/kubernetes/flux/repositories/helm/fairwinds.yaml
@@ -2,7 +2,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: fairwinds-charts
+  name: fairwinds
   namespace: flux-system
 spec:
   interval: 30m
