--- a/kubernetes/apps/rook-ceph/rook-ceph/operator/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/operator/helmrelease.yaml
@@ -8,7 +8,8 @@ spec:
   chart:
     spec:
       chart: rook-ceph
-      version: 1.9.x
+      #version: 1.9.x
+      version: v1.10.10
       sourceRef:
         kind: HelmRepository
         name: rook-ceph
