--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -23,7 +23,7 @@ resources:
   - ./node-feature-discovery.yaml
   - ./nfs-subdir-external-provisioner.yaml
   - ./prometheus-community.yaml
-  - ./rook-ceph.yaml
+  #- ./rook-ceph.yaml
   - ./stakater.yaml
   - ./weave-gitops.yaml
   - ./traefik.yaml
