--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -16,7 +16,7 @@ spec:
         namespace: flux-system
   maxHistory: 3
   install:
-    createNamespace: true
+    # createNamespace: true
     remediation:
       retries: 3
   upgrade:
