--- a/kubernetes/apps/longhorn-system/longhorn-system/kustomization.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   #- recurrent-jobs.yaml
   #- volume-snapshot-class.yaml
   #- secret.sops.yaml
-  - ingress.yaml
+  #- ingress.yaml
   #- service-monitor.yaml
   #- prometheus-rules.yaml
