--- a/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/longhorn-system/helmrelease.yaml
@@ -1,85 +1,135 @@
 ---
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: longhorn
+  namespace: longhorn-system
 spec:
-  interval: 5m
   releaseName: longhorn
+  interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://charts.longhorn.io
       chart: longhorn
       version: 1.4.0
       sourceRef:
         kind: HelmRepository
         name: longhorn
         namespace: flux-system
-      interval: 1m
-  upgrade:
-    force: true
-    remediation:
-      retries: 3
+      interval: 5m
   values:
-    enablePSP: false
     persistence:
-      defaultClass: true
+      defaultClass: false
       defaultClassReplicaCount: 2
-    longhornManager:
-      priorityClass: system-node-critical
-    csi:
-      kubeletRootDir: /var/lib/kubelet
-      attacherReplicaCount: 1
-      provisionerReplicaCount: 1
-      resizerReplicaCount: 1
-      snapshotterReplicaCount: 1
+      reclaimPolicy: Retain
     defaultSettings:
-      #backupTarget: s3://${SECRET_AWS_S3_BUCKET_NAME}@eu-west-2/
-      #backupTargetCredentialSecret: longhorn-s3-aws-creds #gitleaks:allow
+      backupstorePollInterval: 300
+      backupTarget: nfs://${NFS_SERVER_ADDR}:${NFS_SERVER_PATH}/longhorn_backup
       createDefaultDiskLabeledNodes: true
-      removeSnapshotsDuringFilesystemTrim: true
-      replicaSoftAntiAffinity: false
-      orphanAutoDeletion: true
-      upgradeChecker: false
-      autoSalvage: true
-      storageMinimalAvailablePercentage: 5
-      autoDeletePodWhenVolumeDetachedUnexpectedly: true
-      allowVolumeCreationWithDegradedAvailability: true
-      nodeDownPodDeletionPolicy: "delete-both-statefulset-and-deployment-pod"
-      volumeAttachmentRecoveryPolicy: "wait"
-      replicaReplenishmentWaitInterval: 120
-      concurrentAutomaticEngineUpgradePerNodeLimit: 3
-
-    # BEST PRACTICES - https://longhorn.io/docs/1.3.1/best-practices/
-
-    # Minimum Recommended Hardware (https://longhorn.io/docs/1.3.1/best-practices/#minimum-recommended-hardware) ✅
-    # Software (https://longhorn.io/docs/1.3.1/best-practices/#software) ✅
-    # Node and Disk Setup (https://longhorn.io/docs/1.3.1/best-practices/#node-and-disk-setup) ✅
-    # Deploying Workloads (https://longhorn.io/docs/1.3.1/best-practices/#deploying-workloads) ✅
-    # Volume Maintenance (https://longhorn.io/docs/1.3.1/best-practices/#volume-maintenance) ✅
-    # Guaranteed Instance Manager CPU ✅
-    # StorageClass (https://longhorn.io/docs/1.3.1/best-practices/#storageclass) ✅
-    # Scheduling Settings (https://longhorn.io/docs/1.3.1/best-practices/#scheduling-settings) ❌
-    longhornDriver:
-      priorityClass: system-node-critical
-      tolerations:
-        - key: "node.kubernetes.io/unreachable"
-          operator: "Exists"
-          effect: "NoExecute"
-          # Evict pods from the node if the node becomes unreachable after this toleration timer expires.
-          tolerationSeconds: 15
+      defaultDataLocality: best-effort
+      nodeDownPodDeletionPolicy: delete-both-statefulset-and-deployment-pod
+      concurrentAutomaticEngineUpgradePerNodeLimit: 1
+      storageMinimalAvailablePercentage: 10
+      defaultReplicaCount: 2
+      defaultLonghornStaticStorageClass: longhorn
     ingress:
-      enabled: false
-    longhornUI:
-      tolerations:
-        - key: "node.kubernetes.io/unreachable"
-          operator: "Exists"
-          effect: "NoExecute"
-          # Evict pods from the node if the node becomes unreachable after this toleration timer expires.
-          tolerationSeconds: 15
-    resources:
-      requests:
-        cpu: "50m"
-        memory: "50Mi"
-      limits:
-        cpu: "2500m"
-        memory: "500Mi"
+      enabled: true
+      host: "longhorn.${SECRET_DOMAIN}"
+      path: /
+      tls: true
+      tlsSecret: longhorn
+      annotations:
+        kubernetes.io/ingress.class: traefik
+        cert-manager.io/cluster-issuer: "letsencrypt-production"
+        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+        coredns.io/hostname: "longhorn.${SECRET_DOMAIN}"
+        hajimari.io/enable: "true"
+        hajimari.io/icon: cow
+        hajimari.io/group: storage
+        hajimari.io/appName: longhorn
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: longhorn
+# spec:
+#   interval: 5m
+#   releaseName: longhorn
+#   chart:
+#     spec:
+#       chart: longhorn
+#       version: 1.4.0
+#       sourceRef:
+#         kind: HelmRepository
+#         name: longhorn
+#         namespace: flux-system
+#       interval: 1m
+#   upgrade:
+#     force: true
+#     remediation:
+#       retries: 3
+#   values:
+#     enablePSP: false
+#     persistence:
+#       defaultClass: true
+#       defaultClassReplicaCount: 2
+#     longhornManager:
+#       priorityClass: system-node-critical
+#     csi:
+#       kubeletRootDir: /var/lib/kubelet
+#       attacherReplicaCount: 1
+#       provisionerReplicaCount: 1
+#       resizerReplicaCount: 1
+#       snapshotterReplicaCount: 1
+#     defaultSettings:
+#       #backupTarget: s3://${SECRET_AWS_S3_BUCKET_NAME}@eu-west-2/
+#       #backupTargetCredentialSecret: longhorn-s3-aws-creds #gitleaks:allow
+#       createDefaultDiskLabeledNodes: true
+#       removeSnapshotsDuringFilesystemTrim: true
+#       replicaSoftAntiAffinity: false
+#       orphanAutoDeletion: true
+#       upgradeChecker: false
+#       autoSalvage: true
+#       storageMinimalAvailablePercentage: 5
+#       autoDeletePodWhenVolumeDetachedUnexpectedly: true
+#       allowVolumeCreationWithDegradedAvailability: true
+#       nodeDownPodDeletionPolicy: "delete-both-statefulset-and-deployment-pod"
+#       volumeAttachmentRecoveryPolicy: "wait"
+#       replicaReplenishmentWaitInterval: 120
+#       concurrentAutomaticEngineUpgradePerNodeLimit: 3
+
+#     # BEST PRACTICES - https://longhorn.io/docs/1.3.1/best-practices/
+
+#     # Minimum Recommended Hardware (https://longhorn.io/docs/1.3.1/best-practices/#minimum-recommended-hardware) ✅
+#     # Software (https://longhorn.io/docs/1.3.1/best-practices/#software) ✅
+#     # Node and Disk Setup (https://longhorn.io/docs/1.3.1/best-practices/#node-and-disk-setup) ✅
+#     # Deploying Workloads (https://longhorn.io/docs/1.3.1/best-practices/#deploying-workloads) ✅
+#     # Volume Maintenance (https://longhorn.io/docs/1.3.1/best-practices/#volume-maintenance) ✅
+#     # Guaranteed Instance Manager CPU ✅
+#     # StorageClass (https://longhorn.io/docs/1.3.1/best-practices/#storageclass) ✅
+#     # Scheduling Settings (https://longhorn.io/docs/1.3.1/best-practices/#scheduling-settings) ❌
+#     longhornDriver:
+#       priorityClass: system-node-critical
+#       tolerations:
+#         - key: "node.kubernetes.io/unreachable"
+#           operator: "Exists"
+#           effect: "NoExecute"
+#           # Evict pods from the node if the node becomes unreachable after this toleration timer expires.
+#           tolerationSeconds: 15
+#     ingress:
+#       enabled: false
+#     longhornUI:
+#       tolerations:
+#         - key: "node.kubernetes.io/unreachable"
+#           operator: "Exists"
+#           effect: "NoExecute"
+#           # Evict pods from the node if the node becomes unreachable after this toleration timer expires.
+#           tolerationSeconds: 15
+#     resources:
+#       requests:
+#         cpu: "50m"
+#         memory: "50Mi"
+#       limits:
+#         cpu: "2500m"
+#         memory: "500Mi"
