--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./kubernetes-dashboard/ks.yaml
   - ./goldilocks/ks.yaml
   - ./vpa/ks.yaml
-  #- ./kube-prometheus-stack/ks.yaml
-  #- ./grafana/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
+  - ./grafana/ks.yaml
