--- a/ansible/playbooks/vm-mount-storage.yml
+++ b/ansible/playbooks/vm-mount-storage.yml
@@ -1,7 +1,7 @@
 # https://kubernetes.io/blog/2019/03/15/kubernetes-setup-using-ansible-and-vagrant/
 # https://github.com/virtualelephant/vsphere-kubernetes/blob/master/ansible/cilium-install.yml#L57
 ---
-- hosts: all
+- hosts: kubernetes
   become: true
   remote_user: ubuntu
   vars:
@@ -10,25 +10,40 @@
     permission: '0777'
     myopts: 'rw,sync'
   tasks:
-    - name: utility present debian-like
+    - name: Utility present debian-like
       ansible.builtin.apt:
         name:
           - nfs-common
           - nfs4-acl-tools
         state: present
       when: ansible_os_family == 'Debian'
-    - name: check mountpoint exist
+    - name: Check mountpoint exist
       ansible.builtin.file:
-        path: "{{ mountpoint }}"
+        path: "{{ item.path }}"
         state: directory
         mode: "{{ permission }}"
         owner: root
         group: root
-    - name: mount network share
+      with_items:
+        - path: "/network-storage"
+        - path: "/downloads"
+        - path: "/movies"
+        - path: "/tv"
+
+    - name: Mount network share
       ansible.posix.mount:
-        src: "{{ mynfs }}"
-        path: "{{ mountpoint }}"
+        src: "{{ item.src }}"
+        path: "{{ item.path }}"
         fstype: nfs
         opts: "{{ myopts }}"
         state: mounted
+      with_items:
+        - src: "192.168.1.2:/volume1/network-storage"
+          path: "/network-storage"
+        - src: "192.168.1.2:/volume1/Downloads"
+          path: "/downloads"
+        - src: "192.168.1.2:/volume1/Video/Movies"
+          path: "/movies"
+        - src: "192.168.1.2:/volume1/Video/TV"
+          path: "/tv"
 ...
