--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -86,18 +86,18 @@ spec:
     #     name: pvc-downloads
 
     persistence:
-      # downloads:
-      #   enabled: true
-      #   existingClaim: pvc-downloads
-        #mountPath: /downloads
-      # movies:
-      #   enabled: true
-      #   existingClaim: pvc-movies
-        #mountPath: /movies
-      # tv:
-      #   enabled: true
-      #   existingClaim: pvc-tv
-        #mountPath: /tv
+      downloads:
+        enabled: true
+        existingClaim: pvc-downloads
+        mountPath: /downloads
+      movies:
+        enabled: true
+        existingClaim: pvc-movies
+        mountPath: /movies
+      tv:
+        enabled: true
+        existingClaim: pvc-tv
+        mountPath: /tv
       incomplete:
         enabled: true
         type: emptyDir
