--- a/kubernetes/apps/media/sonarr/app/pvc.yaml
+++ b/kubernetes/apps/media/sonarr/app/pvc.yaml
@@ -3,15 +3,21 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pv-sonarr-config
+  namespace: media
 spec:
-  accessModes:
-    - ReadWriteOnce
+  storageClassName: ""
   capacity:
-    storage: 10Gi
-  hostPath:
-    path: /network-storage/sonarr
-    type: DirectoryOrCreate
-  storageClassName: local
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: 192.168.1.2
+    path: "/network-storage/sonarr"
+    readOnly: false
+  mountOptions:
+    - nfsvers=4.1
+    - hard
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -22,7 +28,7 @@ spec:
   accessModes:
     - ReadWriteMany
   volumeName: pv-sonarr-config
-  storageClassName: local
+  storageClassName: ""
   resources:
     requests:
       storage: 1Mi
