--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -36,10 +36,10 @@ spec:
       SABNZBD__PORT: 8085
       SABNZBD__HOST_WHITELIST_ENTRIES: >-
         sabnzbd,
-        sabnzbd.default,
-        sabnzbd.default.svc,
-        sabnzbd.default.svc.cluster,
-        sabnzbd.default.svc.cluster.local,
+        sabnzbd.media,
+        sabnzbd.media.svc,
+        sabnzbd.media.svc.cluster,
+        sabnzbd.media.svc.cluster.local,
         sabnzbd.${SECRET_DOMAIN}
     # envFrom:
     #   - secretRef:
