--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -86,6 +86,10 @@ spec:
     #     name: pvc-downloads
 
     persistence:
+      config:
+        enabled: true
+        existingClaim: pvc-sabnzbd-config
+        mountPath: /config
       downloads:
         enabled: true
         existingClaim: pvc-downloads
