--- a/kubernetes/apps/media/sabnzbd/app/pvc.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/pvc.yaml
@@ -1,37 +1,51 @@
 ---
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: pv-sabnzbd-config
-  namespace: media
-spec:
-  storageClassName: ""
-  capacity:
-    storage: 10Mi
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  nfs:
-    server: 192.168.1.2
-    path: "/network-storage/sabnzbd"
-    readOnly: false
-  mountOptions:
-    - nfsvers=4.1
-    - hard
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-sabnzbd-config
+  name: sabnzbd-config
   namespace: media
 spec:
   accessModes:
-    - ReadWriteMany
-  volumeName: pv-sabnzbd-config
-  storageClassName: ""
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 10Mi
+      storage: 1Gi
+  storageClassName: longhorn
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: pv-sabnzbd-config
+#   namespace: media
+# spec:
+#   storageClassName: ""
+#   capacity:
+#     storage: 10Mi
+#   accessModes:
+#     - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Retain
+#   nfs:
+#     server: 192.168.1.2
+#     path: "/network-storage/sabnzbd"
+#     readOnly: false
+#   mountOptions:
+#     - nfsvers=4.1
+#     - hard
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: pvc-sabnzbd-config
+#   namespace: media
+# spec:
+#   accessModes:
+#     - ReadWriteMany
+#   volumeName: pv-sabnzbd-config
+#   storageClassName: ""
+#   resources:
+#     requests:
+#       storage: 10Mi
 
 # ---
 # apiVersion: v1
