--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -31,9 +31,9 @@ spec:
     image:
       repository: ghcr.io/onedr0p/sabnzbd
       tag: 3.7.1@sha256:e1a805ab246712b2c9a834b88ffefd77aba89b2ffcfdf1a9535333fcb4a60f91
-      volumeMounts:
-        - name: config
-          mountPath: /config
+      # volumeMounts:
+      #   - name: config
+      #     mountPath: /config
     env:
       TZ: America/New_York
       SABNZBD__PORT: 8085
@@ -52,11 +52,18 @@ spec:
         ports:
           http:
             port: 8085
-
-    volumes:
+    volumeClaimTemplates:
       - name: config
-        persistentVolumeClaim:
-          claimName: longhorn-pvc-sabnzbd-config
+        mountPath: /config
+        accessMode: ReadWriteOnce
+        size: 1Gi
+        storageClass: longhorn
+        labels:
+          snapshot.home.arpa/enabled: "true"
+    # volumes:
+    #   - name: config
+    #     persistentVolumeClaim:
+    #       claimName: longhorn-pvc-sabnzbd-config
     persistence:
       # config:
       #   enabled: true
