--- a/kubernetes/apps/longhorn-system/namespace.yaml
+++ b/kubernetes/apps/longhorn-system/namespace.yaml
@@ -4,5 +4,5 @@ kind: Namespace
 metadata:
   name: longhorn-system
   labels:
-    kustomize.toolkit.fluxcd.io/prune: "false"
+    kustomize.toolkit.fluxcd.io/prune: "true"
     goldilocks.fairwinds.com/enabled: "true"
